crates/rome_diagnostics/tests/macros/tags_eq.stderr
error: failed to parse "diagnostic" attribute: expected parentheses
 --> tests/macros/tags_eq.rs:4:19
  |
4 | #[diagnostic(tags = Identifier)]
  |                   ^
