crates/rome_diagnostics/tests/macros/tags_eq.rs
use rome_diagnostics::Diagnostic;

#[derive(Debug, Diagnostic)]
#[diagnostic(tags = Identifier)]
struct TestDiagnostic {}

fn main() {}
